--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <div class="framer-hog65k" data-framer-name="nav">
                                 <div style="display:none" class="framer-19mmcuz" data-framer-name="socials"><!--$--><a
                                         class="framer-1mop0n framer-ppl9u9" data-framer-name="telegram"
-                                        href="https://t.me/SPIKYonsolana" target="_blank" rel="noopener">
+                                        href="https://t.me/spiky_sol" target="_blank" rel="noopener">
                                     <div data-framer-component-type="SVG" data-framer-name="icon"
                                          style="image-rendering:pixelated;flex-shrink:0" class="framer-16tdrgk"
                                          aria-hidden="true">
@@ -98,19 +98,22 @@
                                         </div>
                                     </div>
                                 </a><!--/$--><!--$--><a style="display:none" class="framer-9rwil3 nond framer-ppl9u9" data-framer-name="Tiktok"
-                                                        href="https://www.tiktok.com/@SPIKYonsolana" target="_blank"
+                                                        href="https://www.tiktok.com/@spiky_sol" target="_blank"
                                                         rel="noopener">
                                     <div data-framer-component-type="SVG" data-framer-name="Twitter-svgrepo-com"
                                          style="image-rendering:pixelated;flex-shrink:0;fill:var(--token-02baa3d7-c8fa-4c33-9ed9-8cd7c912f365, rgb(255, 160, 36)) /* {&quot;name&quot;:&quot;light yellow&quot;} */;color:var(--token-02baa3d7-c8fa-4c33-9ed9-8cd7c912f365, rgb(255, 160, 36)) /* {&quot;name&quot;:&quot;light yellow&quot;} */"
                                          class="framer-q0pbar" aria-hidden="true">
                                         <div class="svgContainer" style="width:100%;height:100%;aspect-ratio:inherit">
-                                            <svg style="width:100%;height:100%" viewBox="0 0 800 800">
-                                                <use href="#svg-643767863_396"/>
-                                            </svg>
+<!--                                            <svg style="width:100%;height:100%" viewBox="0 0 800 800">-->
+<!--&lt;!&ndash;                                                <use href="#svg-643767863_396"/>&ndash;&gt;-->
+<!--                                            </svg>-->
+                                            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 800 800">
+<path fill="#03A9F4" d="M42,12.429c-1.323,0.586-2.746,0.977-4.247,1.162c1.526-0.906,2.7-2.351,3.251-4.058c-1.428,0.837-3.01,1.452-4.693,1.776C34.967,9.884,33.05,9,30.926,9c-4.08,0-7.387,3.278-7.387,7.32c0,0.572,0.067,1.129,0.193,1.67c-6.138-0.308-11.582-3.226-15.224-7.654c-0.64,1.082-1,2.349-1,3.686c0,2.541,1.301,4.778,3.285,6.096c-1.211-0.037-2.351-0.374-3.349-0.914c0,0.022,0,0.055,0,0.086c0,3.551,2.547,6.508,5.923,7.181c-0.617,0.169-1.269,0.263-1.941,0.263c-0.477,0-0.942-0.054-1.392-0.135c0.94,2.902,3.667,5.023,6.898,5.086c-2.528,1.96-5.712,3.134-9.174,3.134c-0.598,0-1.183-0.034-1.761-0.104C9.268,36.786,13.152,38,17.321,38c13.585,0,21.017-11.156,21.017-20.834c0-0.317-0.01-0.633-0.025-0.945C39.763,15.197,41.013,13.905,42,12.429"></path>
+</svg>
                                         </div>
                                     </div>
                                 </a><!--/$--><!--$--><a class="framer-ndiecq framer-ppl9u9" data-framer-name="dextools"
-                                                        href="https://dexscreener.com/solana/fxpxx3ofhke4x1bmijjfzrpbhmywxn3bu4tdkyzwu5c2"
+                                                        href="https://dexscreener.com/solana/CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump"
                                                         target="_blank" rel="noopener">
                                     <div data-framer-component-type="SVG" data-framer-name="icon"
                                          style="image-rendering:pixelated;flex-shrink:0" class="framer-14oddiv"
@@ -347,7 +350,7 @@
                                     class="framer-2fPQr framer-QfYbj framer-ob84kb framer-v-ob84kb framer-6ac9md"
                                     data-border="true" data-framer-name="regular"
                                     style="--border-bottom-width:3px;--border-color:var(--token-eb6636f3-e844-4fc1-b8f6-ce98b0287261, rgb(255, 255, 255));--border-left-width:3px;--border-right-width:3px;--border-style:solid;--border-top-width:3px;background-color:var(--token-02baa3d7-c8fa-4c33-9ed9-8cd7c912f365, rgb(255, 160, 36));border-bottom-left-radius:100px;border-bottom-right-radius:100px;border-top-left-radius:100px;border-top-right-radius:100px;height:100%;width:100%"
-                                    href="https://dexscreener.com/solana/fxpxx3ofhke4x1bmijjfzrpbhmywxn3bu4tdkyzwu5c2"
+                                    href="https://dexscreener.com/solana/CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump"
                                     target="_blank" rel="noopener">
                                 <div class="framer-ts3gfi"
                                      style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--framer-paragraph-spacing:0px;transform:none"
@@ -419,7 +422,7 @@
                                                    transform="scale(1)"
                                                    style="overflow:visible;transform-origin:center center"><p
                                             style="--font-selector:R0Y7QnJpY29sYWdlIEdyb3Rlc3F1ZS02MDA=;--framer-font-family:&quot;Bricolage Grotesque&quot;, &quot;Bricolage Grotesque Placeholder&quot;, sans-serif;--framer-font-size:75.00932820233868px;--framer-font-weight:600;--framer-letter-spacing:-0.07px;--framer-text-color:var(--extracted-r6o4lv, var(--token-a943d5d5-a946-417e-bd3f-32c32ef03bc5, rgb(138, 23, 23)))"
-                                            class="framer-text">ABDoiSudvFjjJ25rtXn8V2b6QGrH59KN6thAbsPvpump</p>
+                                            class="framer-text">CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump</p>
                                     </foreignObject>
                                 </svg>
                             </div>
@@ -461,7 +464,7 @@
                                                    transform="scale(1)"
                                                    style="overflow:visible;transform-origin:center center"><p
                                             style="--font-selector:R0Y7QnJpY29sYWdlIEdyb3Rlc3F1ZS02MDA=;--framer-font-family:&quot;Bricolage Grotesque&quot;, &quot;Bricolage Grotesque Placeholder&quot;, sans-serif;--framer-font-size:75.00932820233868px;--framer-font-weight:600;--framer-letter-spacing:-0.07px;--framer-text-color:var(--extracted-r6o4lv, var(--token-a943d5d5-a946-417e-bd3f-32c32ef03bc5, rgb(138, 23, 23)))"
-                                            class="framer-text">ABDoiSudvFjjJ25rtXn8V2b6QGrH59KN6thAbsPvpump</p>
+                                            class="framer-text">CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump</p>
                                     </foreignObject>
                                 </svg>
                             </div>
@@ -503,7 +506,7 @@
                                                    transform="scale(1)"
                                                    style="overflow:visible;transform-origin:center center"><p
                                             style="--font-selector:R0Y7QnJpY29sYWdlIEdyb3Rlc3F1ZS02MDA=;--framer-font-family:&quot;Bricolage Grotesque&quot;, &quot;Bricolage Grotesque Placeholder&quot;, sans-serif;--framer-font-size:75.00932820233868px;--framer-font-weight:600;--framer-letter-spacing:-0.07px;--framer-text-color:var(--extracted-r6o4lv, var(--token-a943d5d5-a946-417e-bd3f-32c32ef03bc5, rgb(138, 23, 23)))"
-                                            class="framer-text">ABDoiSudvFjjJ25rtXn8V2b6QGrH59KN6thAbsPvpump</p>
+                                            class="framer-text">CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump</p>
                                     </foreignObject>
                                 </svg>
                             </div>
@@ -559,7 +562,7 @@
                                                         class="framer-EdvJW framer-QfYbj framer-1g5q701 framer-v-1g5q701 framer-19nono9"
                                                         data-border="true" data-framer-name="base"
                                                         style="--border-bottom-width:2px;--border-color:rgb(255, 255, 255);--border-left-width:2px;--border-right-width:2px;--border-style:solid;--border-top-width:2px;background-color:var(--token-02baa3d7-c8fa-4c33-9ed9-8cd7c912f365, rgb(252, 250, 194));border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-top-left-radius:50px;border-top-right-radius:50px"
-                                                        href="https://dexscreener.com/solana/fxpxx3ofhke4x1bmijjfzrpbhmywxn3bu4tdkyzwu5c2"
+                                                        href="https://dexscreener.com/solana/CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump"
                                                         target="_blank" rel="noopener">
                                                     <div class="framer-1u2c1g1"
                                                          style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--framer-paragraph-spacing:0px;transform:none"
@@ -583,7 +586,7 @@
                                                         class="framer-EdvJW framer-QfYbj framer-1g5q701 framer-v-1g5q701 framer-19nono9"
                                                         data-border="true" data-framer-name="base"
                                                         style="--border-bottom-width:2px;--border-color:rgb(255, 255, 255);--border-left-width:2px;--border-right-width:2px;--border-style:solid;--border-top-width:2px;background-color:var(--token-02baa3d7-c8fa-4c33-9ed9-8cd7c912f365, rgb(252, 250, 194));border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-top-left-radius:50px;border-top-right-radius:50px"
-                                                        href="https://dexscreener.com/solana/fxpxx3ofhke4x1bmijjfzrpbhmywxn3bu4tdkyzwu5c2"
+                                                        href="https://dexscreener.com/solana/CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump"
                                                         target="_blank" rel="noopener">
                                                     <div class="framer-1u2c1g1"
                                                          style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--framer-paragraph-spacing:0px;transform:none"
@@ -729,7 +732,7 @@
                                     class="framer-2fPQr framer-QfYbj framer-ob84kb framer-v-ob84kb framer-6ac9md"
                                     data-border="true" data-framer-name="regular"
                                     style="--border-bottom-width:3px;--border-color:var(--token-eb6636f3-e844-4fc1-b8f6-ce98b0287261, rgb(255, 255, 255));--border-left-width:3px;--border-right-width:3px;--border-style:solid;--border-top-width:3px;background-color:var(--token-02baa3d7-c8fa-4c33-9ed9-8cd7c912f365, rgb(255, 160, 36));border-bottom-left-radius:100px;border-bottom-right-radius:100px;border-top-left-radius:100px;border-top-right-radius:100px;height:100%;width:100%"
-                                    href="https://dexscreener.com/solana/fxpxx3ofhke4x1bmijjfzrpbhmywxn3bu4tdkyzwu5c2"
+                                    href="https://dexscreener.com/solana/CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump"
                                     target="_blank" rel="noopener">
                                 <div class="framer-ts3gfi"
                                      style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--framer-paragraph-spacing:0px;transform:none"
@@ -1477,7 +1480,7 @@
                                     class="framer-qdHz4 framer-v2o4wn framer-v-v2o4wn framer-1gz4d3o" data-border="true"
                                     data-framer-name="big"
                                     style="--border-bottom-width:4px;--border-color:var(--token-eb6636f3-e844-4fc1-b8f6-ce98b0287261, rgb(255, 255, 255));--border-left-width:4px;--border-right-width:4px;--border-style:solid;--border-top-width:4px;background-color:var(--token-02baa3d7-c8fa-4c33-9ed9-8cd7c912f365, rgb(185, 164, 233));border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-top-left-radius:50px;border-top-right-radius:50px;height:100%;width:100%"
-                                    href="https://dexscreener.com/solana/fxpxx3ofhke4x1bmijjfzrpbhmywxn3bu4tdkyzwu5c2"
+                                    href="https://dexscreener.com/solana/CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump"
                                     target="_blank" rel="noopener">
                                 <div class="framer-vim1dg"
                                      style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-eb6636f3-e844-4fc1-b8f6-ce98b0287261, rgb(255, 255, 255));--framer-paragraph-spacing:0px;transform:translate(-50%, -50%)"
@@ -1491,7 +1494,7 @@
                                     class="framer-qdHz4 framer-v2o4wn framer-v-v2o4wn framer-1gz4d3o" data-border="true"
                                     data-framer-name="big"
                                     style="--border-bottom-width:4px;--border-color:var(--token-eb6636f3-e844-4fc1-b8f6-ce98b0287261, rgb(255, 255, 255));--border-left-width:4px;--border-right-width:4px;--border-style:solid;--border-top-width:4px;background-color:var(--token-02baa3d7-c8fa-4c33-9ed9-8cd7c912f365, rgb(185, 164, 233));border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-top-left-radius:50px;border-top-right-radius:50px;height:100%;width:100%"
-                                    href="https://dexscreener.com/solana/fxpxx3ofhke4x1bmijjfzrpbhmywxn3bu4tdkyzwu5c2"
+                                    href="https://dexscreener.com/solana/CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump"
                                     target="_blank" rel="noopener">
                                 <div class="framer-vim1dg"
                                      style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-eb6636f3-e844-4fc1-b8f6-ce98b0287261, rgb(255, 255, 255));--framer-paragraph-spacing:0px;transform:translate(-50%, -50%)"
@@ -1505,7 +1508,7 @@
                                     class="framer-qdHz4 framer-v2o4wn framer-v-7gm07v framer-1gz4d3o" data-border="true"
                                     data-framer-name="smaller"
                                     style="--border-bottom-width:4px;--border-color:var(--token-eb6636f3-e844-4fc1-b8f6-ce98b0287261, rgb(255, 255, 255));--border-left-width:4px;--border-right-width:4px;--border-style:solid;--border-top-width:4px;background-color:var(--token-02baa3d7-c8fa-4c33-9ed9-8cd7c912f365, rgb(185, 164, 233));border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-top-left-radius:50px;border-top-right-radius:50px;height:100%;width:100%"
-                                    href="https://dexscreener.com/solana/fxpxx3ofhke4x1bmijjfzrpbhmywxn3bu4tdkyzwu5c2"
+                                    href="https://dexscreener.com/solana/CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump"
                                     target="_blank" rel="noopener">
                                 <div class="framer-vim1dg"
                                      style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-eb6636f3-e844-4fc1-b8f6-ce98b0287261, rgb(255, 255, 255));--framer-paragraph-spacing:0px;transform:translate(-50%, -50%)"
@@ -2443,7 +2446,7 @@
                             class="framer-qdHz4 framer-v2o4wn framer-v-v2o4wn framer-1gz4d3o" data-border="true"
                             data-framer-name="big"
                             style="--border-bottom-width:4px;--border-color:var(--token-eb6636f3-e844-4fc1-b8f6-ce98b0287261, rgb(255, 255, 255));--border-left-width:4px;--border-right-width:4px;--border-style:solid;--border-top-width:4px;background-color:var(--token-02baa3d7-c8fa-4c33-9ed9-8cd7c912f365, rgb(185, 164, 233));border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-top-left-radius:50px;border-top-right-radius:50px;height:100%;width:100%"
-                            href="https://dexscreener.com/solana/fxpxx3ofhke4x1bmijjfzrpbhmywxn3bu4tdkyzwu5c2"
+                            href="https://dexscreener.com/solana/CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump"
                             target="_blank" rel="noopener">
                         <div class="framer-vim1dg"
                              style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-eb6636f3-e844-4fc1-b8f6-ce98b0287261, rgb(255, 255, 255));--framer-paragraph-spacing:0px;transform:translate(-50%, -50%)"
@@ -2457,7 +2460,7 @@
                             class="framer-qdHz4 framer-v2o4wn framer-v-7gm07v framer-1gz4d3o" data-border="true"
                             data-framer-name="smaller"
                             style="--border-bottom-width:4px;--border-color:var(--token-eb6636f3-e844-4fc1-b8f6-ce98b0287261, rgb(255, 255, 255));--border-left-width:4px;--border-right-width:4px;--border-style:solid;--border-top-width:4px;background-color:var(--token-02baa3d7-c8fa-4c33-9ed9-8cd7c912f365, rgb(185, 164, 233));border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-top-left-radius:50px;border-top-right-radius:50px;height:100%;max-width:100%;width:100%"
-                            href="https://dexscreener.com/solana/fxpxx3ofhke4x1bmijjfzrpbhmywxn3bu4tdkyzwu5c2"
+                            href="https://dexscreener.com/solana/CdDMcECZDmkPqPrZ9v3vC2TEKLBaifE98eVmv3UApump"
                             target="_blank" rel="noopener">
                         <div class="framer-vim1dg"
                              style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-eb6636f3-e844-4fc1-b8f6-ce98b0287261, rgb(255, 255, 255));--framer-paragraph-spacing:0px;transform:translate(-50%, -50%)"
